nova_tests/plan114/neg/plan114_4_2_non_const_arg_neg.nv
// Plan 114.4.2 T3-NEG.1: runtime arg в call к const fn → E_CONST_FN_NON_CONST_ARG.

// EXPECT_COMPILE_ERROR E_CONST_FN_NON_CONST_ARG

module neg.plan114_4_2_non_const_arg_neg

fn add(const a int, const b int) -> const int => a + b

fn main_runtime() {
    ro x = 5
    const R = add(x, 3)
}
